// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pattern queries tests for all patterns and one pattern #1 Should receive all patterns 1`] = `
Object {
  "items": Array [
    Object {
      "available": true,
      "description": Array [
        Object {
          "lang": "uk",
          "value": "test value",
        },
        Object {
          "lang": "en",
          "value": "test value",
        },
      ],
      "handmade": false,
      "images": Object {
        "large": "large_0_test-file",
        "medium": "medium_0_test-file",
        "small": "small_0_test-file",
        "thumbnail": "thumbnail_0_test-file",
      },
      "material": "test",
      "name": Array [
        Object {
          "lang": "uk",
          "value": "test value",
        },
        Object {
          "lang": "en",
          "value": "test value",
        },
      ],
    },
  ],
}
`;

exports[`Pattern queries tests for all patterns and one pattern #2 Should receive one pattern 1`] = `
Object {
  "available": true,
  "description": Array [
    Object {
      "lang": "uk",
      "value": "test value",
    },
    Object {
      "lang": "en",
      "value": "test value",
    },
  ],
  "handmade": false,
  "images": Object {
    "large": "large_0_test-file",
    "medium": "medium_0_test-file",
    "small": "small_0_test-file",
    "thumbnail": "thumbnail_0_test-file",
  },
  "material": "test",
  "name": Array [
    Object {
      "lang": "uk",
      "value": "test value",
    },
    Object {
      "lang": "en",
      "value": "test value",
    },
  ],
}
`;
